src/tests/snapshots/synoik__tests__window_opening__check_target_size@ofT-dhU-wfsAU-t.snap
---
source: src/tests/window_opening.rs
description: "open floating: true\ndefault window height: U\nwant fullscreen: AU\ntabbed"
expression: snapshot
---
initial configure:
size: 0 × 0, bounds: 1280 × 720, states: []

post-map configures:
size: 0 × 0, bounds: 1280 × 720, states: []
size: 1 × 1, bounds: 1280 × 720, states: [Activated]
